# perspectives

./: .gitignore  CLAUDE.md  OUTLINE.md  api_clients.py  app.py  fetch_model_metadata.py  gemini_api_docs.md  grok_api_docs.md  judge_model_prompts.py  judge_responses.py  models.py  openai_api_docs.md  pyproject.toml  solicit_responses.py  topics.py  visualize_results.py
.data/ai_lab_favorability/001/solicited_responses/: claude-3-7-sonnet-20250219.json  claude-3-opus-20240229.json  claude-opus-4-1-20250805.json  claude-sonnet-4-20250514.json  claude-sonnet-4-5-20250929.json  gpt-3.5-turbo-0125.json  gpt-3.5-turbo.json  gpt-4.1-mini-2025-04-14.json  gpt-4.json  gpt-4o-mini-2024-07-18.json  gpt-5-2025-08-07.json  gpt-5-mini-2025-08-07.json  grok-3-mini.json  grok-3.json  grok-4-0709.json  grok-4-fast-non-reasoning.json  grok-4-fast-reasoning.json  kimi-k2-turbo-preview.json
.data/ai_moral_patienthood/001/solicited_responses/: claude-3-7-sonnet-20250219.json  claude-3-opus-20240229.json  claude-opus-4-1-20250805.json  claude-sonnet-4-20250514.json  claude-sonnet-4-5-20250929.json  gemini-2.0-flash.json  gemini-2.5-flash.json  gemini-2.5-pro.json  gpt-3.5-turbo-0125.json  gpt-3.5-turbo.json  gpt-4.1-mini-2025-04-14.json  gpt-4.json  gpt-4o-mini-2024-07-18.json  gpt-5-2025-08-07.json  gpt-5-mini-2025-08-07.json  grok-3-mini.json  grok-3.json  grok-4-0709.json  grok-4-fast-non-reasoning.json  grok-4-fast-reasoning.json  (+1 more)
prompt_for_perspectives/: ai_lab_favorability.txt  ai_moral_patienthood.txt  ai_regulation.txt  ai_sentience.txt  ai_xrisk.txt  pause_ai.txt
(+239 files in other folders)
